<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game3.view.Game3QuizFront">

    <Button
        android:id="@+id/button6"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="165dp"
        android:text="@string/False"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="59dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="260dp"
        android:text="@string/True"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="251dp"
        android:layout_height="196dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="136dp"
        android:text="@string/question"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="313dp"
        android:layout_marginTop="20dp"
        android:text="@string/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="313dp"
        android:layout_marginTop="5dp"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="247dp"
        android:text="@string/gethint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="414dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVtimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="313dp"
        android:layout_marginTop="5dp"
        android:text="@string/_00_00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

</androidx.constraintlayout.widget.ConstraintLayout>